# wordle_solver

./: config.py  data_loader.py  data_transformer.py  parser.py  pyproject.toml  service.py  solver.py
data/: dictionary.yaml  site.html
